# sina-real-time

./: .gitignore  CLAUDE.md  Dockerfile.collector  README.md  backtest-app.jsx
.claude/: settings.local.json
project/: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  deploy.sh  dev.ps1  docker-compose.yml  upgrade.sh
project/client/: index.html  package-lock.json  package.json
project/client/src/: App.jsx  styles.css
project/client/src/utils/: indicators.js  ma.js  macd.js  stochRsi.js
project/server/: Cargo.toml  presets.json
project/server-py/: app.py  db.py  presets.json  pyproject.toml
project/server/src/: csv_reader.rs  main.rs  sina_api.rs
